Fix quick links, flash overlapping with navbar also hover color is now white

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,6 @@ html {
 body {
   min-height: 100%;
   margin: 0;
-  padding: 4rem 0 0 0;
   background-color: rgba(238, 238, 238, 0.5);
   font-family: "Raleway", helvetica, sans-serif !important;
   display: flex;
@@ -56,13 +55,18 @@ h1 {
   font-size: 2.25rem;
 }
 
-.dropdown-item:active {
-  color: #000 !important;
-  background-color: #497979 !important;
-}
+.dropdown-item {
+  :active {
+    color: #000 !important;
+    background-color: #497979 !important;
+  }
 
-.dropdown-item:hover {
-  background-color: rgba(59, 147, 147, 0.2) !important;
+  :hover {
+    background-color: rgba(59, 147, 147, 0.2) !important;
+  }
+
+  font-weight: 700; // bold
+  color: $secondary;
 }
 
 // Add the triangle between the menu and the dropdown button
@@ -89,6 +93,7 @@ $dropdown-connection-size: 12px;
 
 .dropdown-menu {
   border: none;
+  border-radius: 4px;
   box-shadow: 4px blur;
 }
 
