--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,15 +4,6 @@
 .navbar {
   //position: relative;
 
-  &.bg-dark-gradient {
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 1) 0%,
-      rgba(0, 0, 0, 0.6) 50%,
-      rgba(0, 0, 0, 0)
-    ) !important;
-  }
-
   .background {
     position: absolute;
     top: 0;
@@ -60,6 +51,10 @@
     font-weight: 700;
     font-size: 15px;
     text-transform: uppercase;
+
+    &:hover {
+      color: #fff;
+    }
   }
 
   .avatar {
